Update stylesheet links to remove leading './'

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       name="description"
       content="Trường Mầm non Tuổi Ngọc - Xã Quảng Phú, tỉnh Đắk Lắk. Môi trường giáo dục chất lượng cho trẻ em mầm non."
     />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/responsive.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
